content/terraform-enterprise/1.0.x/docs/enterprise/workspaces/dynamic-provider-credentials/index.mdx
---
page_title: Dynamic provider credentials in Terraform Enterprise
description: >-
  Dynamic provider credentials generate temporary credentials for Terraform
  Enterprise runs. Learn how dynamic credentials for Vault, AWS, Azure,
  Kubernetes, and GCP can improve your security.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-08-11T21:14:21-07:00
last_modified: 2025-08-11T21:14:21-07:00
# END AUTO GENERATED METADATA
---

# Dynamic provider credentials

~> **Important:** If you are self-hosting [HCP Terraform agents](/terraform/cloud-docs/agents), ensure your agents use [v1.7.0](/terraform/cloud-docs/agents/changelog#1-7-0-03-02-2023) or above. To use the latest dynamic credentials features, [upgrade your agents to the latest version](/terraform/cloud-docs/agents/changelog).

Using static credentials in your workspaces to authenticate providers presents a security risk, even if you rotate your credentials regularly. Dynamic provider credentials improve your security posture by letting you provision new, temporary credentials for each run.

You can configure dynamic credentials for each HCP Terraform workspace. This workflow eliminates the need to manually manage and rotate credentials across your organization. It also lets you use the cloud platform’s authentication and authorization tools to scope permissions based on metadata, such as a run’s phase, its workspace, or its organization.

## How Dynamic Credentials Work

You configure a trust relationship between your cloud platform and HCP Terraform. As part of that process, you can define rules that let HCP Terraform workspaces and runs access specific resources. Then, the following process occurs for each Terraform plan and apply:

1.  HCP Terraform generates a [workload identity token](/terraform/enterprise/workspaces/dynamic-provider-credentials/workload-identity-tokens). The token is compliant with OpenID Connect protocol (OIDC) standards and includes information about the organization, workspace, and run stage.
2.  When a plan or apply begins, HCP Terraform sends the workload identity token to the cloud platform, along with any other information needed to authenticate.
3.  The cloud platform uses HCP Terraform’s public signing key to verify the workload identity token.
4.  If verification succeeds, the cloud platform returns a set of fresh temporary credentials for HCP Terraform to use.
5.  HCP Terraform sets up these credentials within the run environment for the Terraform provider to use.
6.  The Terraform plan or apply proceeds.
7.  When the plan or apply completes, the run environment is torn down and the temporary credentials are discarded.

## Configure Dynamic Credentials

Using dynamic credentials in a workspace requires the following steps for each cloud platform:

1.  **Set up a Trust Relationship:** You must configure a relationship between HCP Terraform and the other cloud platform. The exact details of this process will be different depending on the cloud platform.
2.  **Configure Cloud Platform Access:** You must configure roles and policies for the cloud platform to define the workspace’s access to infrastructure resources.
3.  **Configure HCP Terraform Workspace**: You must add specific environment variables to your workspace to tell HCP Terraform how to authenticate to the other cloud platform during plans and applies. Each cloud platform has its own set of environment variables to configure dynamic credentials.

The process for each step is different for each cloud platform. Refer to the cloud platform configuration instructions for full details. You can configure dynamic credentials for the following platforms:

-   [Vault](/terraform/enterprise/workspaces/dynamic-provider-credentials/vault-configuration)
-   [Amazon Web Services](/terraform/enterprise/workspaces/dynamic-provider-credentials/aws-configuration)
-   [Google Cloud Platform](/terraform/enterprise/workspaces/dynamic-provider-credentials/gcp-configuration)
-   [Azure](/terraform/enterprise/workspaces/dynamic-provider-credentials/azure-configuration)
-   [Kubernetes](/terraform/enterprise/workspaces/dynamic-provider-credentials/kubernetes-configuration)

You can also use Vault to generate credentials for AWS, GCP, or Azure by setting up [Vault-backed dynamic credentials](/terraform/enterprise/workspaces/dynamic-provider-credentials/vault-backed), which take advantage of Vault's [secrets engines](/vault/docs/secrets) to generate temporary credentials.

## Terraform Enterprise Specific Requirements

### External Access to Metadata Endpoints

In order to verify signed JWTs, cloud platforms must have network access to the following static OIDC metadata endpoints within TFE:

1.  `/.well-known/openid-configuration` - standard OIDC metadata.
2.  `/.well-known/jwks` - TFE’s public key(s) that cloud platforms use to verify the authenticity of tokens that claim to come from TFE.

### External Vault Policy

If you are using an external Vault instance, you must ensure that your Vault instance has the correct policies setup as detailed in the [External Vault Requirements for Terraform Enterprise](/terraform/enterprise/requirements/data-storage/vault) documentation.
